--- a/fish_app/pubspec.yaml
+++ b/fish_app/pubspec.yaml
@@ -12,9 +12,12 @@ dependencies:
   flutter:
     sdk: flutter
   camera: ^0.11.1
-
+  gal: ^2.3.0
   english_words: ^4.0.0
   provider: ^6.0.0
+  path_provider: ^2.1.1
+  permission_handler: ^11.0.1
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
