mods dependencies pubspec.yaml

--- a/fish_app/pubspec.yaml
+++ b/fish_app/pubspec.yaml
@@ -18,11 +18,13 @@ dependencies:
   path_provider: ^2.1.1
   permission_handler: ^11.0.1
   path: ^1.9.1
+  http: ^0.13.6
+  crypto: ^3.0.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: ^0.13.6
 
   flutter_lints: ^2.0.0
 
