--- a/fish_app/pubspec.yaml
+++ b/fish_app/pubspec.yaml
@@ -1,12 +1,12 @@
 name: fish_app
 description: A new Fish Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 0.0.1+1
 
 environment:
-  sdk: '>=2.19.4 <4.0.0'
+  sdk: ">=2.19.4 <4.0.0"
 
 dependencies:
   flutter:
@@ -18,6 +18,7 @@ dependencies:
   path_provider: ^2.1.1
   permission_handler: ^11.0.1
   path: ^1.9.1
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
@@ -29,5 +30,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/photos/  
-
+    - assets/photos/
