--- a/fish_app/pubspec.yaml
+++ b/fish_app/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   crypto: ^3.0.3
   flutter_dotenv: ^5.1.0
   geolocator: ^11.0.0
-
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
